--- a/pom.xml
+++ b/pom.xml
@@ -19,6 +19,26 @@
 		<java.version>11</java.version>
 	</properties>
 
+	<distributionManagement>
+		<repository>
+			<id>release</id>
+			<name>releases</name>
+			<url>http://localhost:8081/artifactory/example-repo-local</url>
+		</repository>
+		<snapshotRepository>
+			<id>snapshot</id>
+			<name>snapshots</name>
+			<url>http://localhost:8081/artifactory/artifactory-generic</url>
+		</snapshotRepository>
+	</distributionManagement>
+	
+		<scm>
+			<connection>scm:git:git@github.com:nandudemy/devops.git</connection>
+			<developerConnection>scm:git:git@github.com:nieal8773/devops1.git</developerConnection>
+			<url>git@github.com:nandudemy/devops.git</url>
+			<tag>HEAD</tag>
+		</scm>
+
 	<dependencies>
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
@@ -49,8 +69,7 @@
    <dependency>
      <groupId>junit</groupId>
      <artifactId>junit</artifactId>
-     <version>4.12</version>
-   </dependency>
+     </dependency>
  
    <dependency>
      <groupId>org.testng</groupId>
@@ -67,8 +86,7 @@
    <dependency>
      <groupId>org.springframework</groupId>
      <artifactId>spring-context</artifactId>
-     <version>5.1.9.RELEASE</version>
-   </dependency>
+     </dependency>
  </dependencies>
 
 	<build>
@@ -76,6 +94,15 @@
 			<plugin>
 				<groupId>org.springframework.boot</groupId>
 				<artifactId>spring-boot-maven-plugin</artifactId>
+			</plugin>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-release-plugin</artifactId>
+				<version>2.5.1</version>
+				<configuration>
+					<tagNameFormat>v@{project.version}</tagNameFormat>
+					<autoVersionSubmodules>true</autoVersionSubmodules>
+				</configuration>
 			</plugin>
 		</plugins>
 	</build>
